<resources>
    <string name="app_name">Bike and Weather</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">log in</string>
    <string name="not_registered_yet_click_here">Not registered yet? Click here</string>
    <string name="register">register</string>
    <string name="welcome_to_bike_and_weather">Welcome to Bike and Weather</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="station_names">station names</string>
    <string name="bikes_available">bikes available</string>
    <string name="login_error">You are not logged in</string>
    <string name="login_message">You are logged in</string>
    <string name="title_activity_maps">Map</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="title_activity_paris_maps">Map</string>
</resources>