<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/ivBGImageRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@drawable/register" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textColorHint="@color/green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailRegister" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="register"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/tvRegistrarion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>